--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^4.6.3",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.0"
   },
