--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.0.1",
   "description": "",
   "author": "",
+  "engines": {
+    "node": "18.x",
+    "npm": "9.x"
+  },
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start -b swc --type-check",
-    "start:dev": "nest start --watch",
+    "start:dev": "nest start --tsc --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
