--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,18 @@
-version: '3.5'
+version: '3.9'
 
 services:
-  db:
-    image: postgres
-    restart: always
-    environment:
-      - POSTGRES_PASSWORD=postgres
-    container_name: postgres
-    volumes:
-      - ./pgdata:/var/lib/postgresql/data
-    ports:
-      - '5432:5432'
-
   app:
+    container_name: nest
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: nest-docker-postgres
     environment:
-      - PORT=${PORT}
+      - DB_TYPE=postgres
+      - PG_USER=postgres
+      - PG_PASSWORD=postgres
+      - PG_DB=postgres
+      - PG_PORT=5432
+      - PG_HOST=db
     ports:
       - '3000:3000'
     depends_on:
@@ -26,13 +20,29 @@ services:
     volumes:
       - ./src:/app/src
 
+  db:
+    container_name: postgres
+    image: postgres
+    restart: always
+    environment:
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=postgres
+    ports:
+      - '5432:5432'
+    volumes:
+      - ./pgdata:/var/lib/postgresql/data
+
   pgadmin:
+    container_name: pgadmin
     image: dpage/pgadmin4
     restart: always
-    container_name: nest-pgadmin4
+    logging:
+      driver: none
     environment:
       - PGADMIN_DEFAULT_EMAIL=admin@admin.com
       - PGADMIN_DEFAULT_PASSWORD=pgadmin4
+      - GUNICORN_ACCESS_LOGFILE=/dev/null
     ports:
       - '5050:80'
     depends_on:
