--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "docker-compose:dev": "docker-compose up --build"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -45,6 +46,7 @@
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^4.6.3",
     "typeorm": "^0.3.17",
+    "typeorm-naming-strategies": "^4.1.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
