added register user feature

--- a/.env
+++ b/.env
@@ -5,4 +5,9 @@ DB_USERNAME=postgres
 POSTGRES_PASSWORD=postgres
 DB_DATABASE=postgres
 
+PG_USER=postgres
+PG_PASSWORD=postgres
+PG_DB=postgres
+PG_host=db
+PG_PORT=5432
 PORT=3000
