--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
-DB_TYPE=postgres
-DB_HOST=db
-DB_PORT=5432
-DB_USERNAME=postgres
-POSTGRES_PASSWORD=postgres
-DB_DATABASE=postgres
+NODE_ENV=development
 
 PG_USER=postgres
 PG_PASSWORD=postgres
 PG_DB=postgres
-PG_host=db
 PG_PORT=5432
-PORT=3000
+
+POSTGRES_PASSWORD=postgres
+POSTGRES_USER=postgres
+POSTGRES_DB=postgres
+
+PGADMIN_DEFAULT_EMAIL=admin@admin.com
+PGADMIN_DEFAULT_PASSWORD=pgadmin4
