--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,7 +8,6 @@ pipelines:
             - docker build -t $IMAGE_NAME .
             - docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
             - docker push $IMAGE_NAME
-
       - step:
           name: Deploy to droplet
           script:
@@ -18,7 +17,8 @@ pipelines:
                 SSH_USER: $SSH_USER
                 SERVER: $SSH_SERVER
                 COMMAND: >
-                  docker stop $CONTAINERS_TO_STOP
-                  docker run -p $SERVER_PORT:$SERVER_PORT -d  $IMAGE_NAME
+                  docker stop $(docker ps -a -q --filter ancestor=$IMAGE_NAME)
+                  docker rm $(docker ps -a -q --filter ancestor=$IMAGE_NAME)
+                  docker run -p $SERVER_PORT:$SERVER_PORT -d $IMAGE_NAME
           services:
             - docker
