--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,14 +6,14 @@ pipelines:
           services:
             - docker
           script:
-            - export IMAGE_NAME=your_name/project_name:$BITBUCKET_COMMIT
+            - export IMAGE_NAME=$DOCKER_HUB_USERNAME/sparx:$BITBUCKET_COMMIT
             - docker build -t $IMAGE_NAME .
             - docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
             - docker push $IMAGE_NAME
       - step:
           name: Deploy to droplet
           script:
-            - export IMAGE_NAME=your_name/project_name:$BITBUCKET_COMMIT
+            - export IMAGE_NAME=$DOCKER_HUB_USERNAME/sparx:$BITBUCKET_COMMIT
             - pipe: atlassian/ssh-run:0.2.2
               variables:
                 SSH_USER: $SSH_USER
