--- a/.env
+++ b/.env
@@ -11,3 +11,5 @@ POSTGRES_DB=postgres
 
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=pgadmin4
+
+CLIENT_BASE_URL=http://localhost:5173
