adjusted env variable for Client Base Url

--- a/.env
+++ b/.env
@@ -12,4 +12,4 @@ POSTGRES_DB=postgres
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=pgadmin4
 
-CLIENT_BASE_URL=http://localhost:5173
+CLIENT_BASE_URL=https://master--sparx-chat.netlify.app
