--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -32,7 +32,7 @@ pipelines:
               variables:
                 USER: $SSH_USER
                 SERVER: $SSH_SERVER
-                REMOTE_PATH: '../var/projects/sparx-api/'
+                REMOTE_PATH: '/var/projects/sparx-api/'
                 LOCAL_PATH: '.env docker-compose.yml .env.prod'
 
       - step:
