--- a/.env
+++ b/.env
@@ -12,4 +12,9 @@ POSTGRES_DB=postgres
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=pgadmin4
 
-CLIENT_BASE_URL=https://master--sparx-chat.netlify.app
+CLIENT_BASE_URL=http://localhost:5173
+
+BASE_URL=https://localhost:3000
+
+DOCKER_HUB_USERNAME=dev
+TAG=dev
