--- a/.env.prod
+++ b/.env.prod
@@ -13,3 +13,5 @@ PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=pgadmin4
 
 CLIENT_BASE_URL=https://master--sparx-chat.netlify.app
+
+BASE_URL=https://165.227.44.99
