--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "handlebars": "^4.7.8",
+    "nestjs-pino": "^3.4.0",
     "nestjs-spelunker": "^1.1.5",
     "nodemailer": "^6.9.4",
     "nodemailer-mailgun-transport": "^2.1.5",
@@ -45,6 +46,9 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.1",
+    "pino": "^8.15.0",
+    "pino-http": "^8.5.0",
+    "pino-pretty": "^10.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^4.6.3",
