--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     depends_on:
       - db
     volumes:
-      - C:\logs:/var/logs
+      - /var/logs:var/logs
 
   db:
     container_name: postgres
