--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     depends_on:
       - db
     volumes:
-      - /var/logs:/var/logs
+      - /var/log:/var/log
 
   db:
     container_name: postgres
