--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -31,23 +31,31 @@ pipelines:
                 SERVER: $SSH_SERVER
                 COMMAND: |
                   sh -c '
-                  echo "DOCKER_HUB_USERNAME=$DOCKER_HUB_USERNAME" >> /var/www/sparx-api/.env && \
-                  echo "TAG=$BITBUCKET_COMMIT" >> /var/www/sparx-api/.env
+                  update_or_append() {
+                    local file=$1
+                    local key=$2
+                    local value=$3
+
+                    if grep -qE "^$key=" "$file"; then
+                      sed -i "s/^$key=.*/$key=$value/" "$file"
+                    else
+                      echo "$key=$value" >> "$file"
+                    fi
+                  }
+
+                  update_or_append "/var/www/sparx-api/.env" "DOCKER_HUB_USERNAME" "$DOCKER_HUB_USERNAME"
+                  update_or_append "/var/www/sparx-api/.env" "TAG" "$BITBUCKET_COMMIT"
                   '
 
       - step:
           name: Deploy to droplet
           script:
-            - export DOCKER_HUB_USERNAME=$DOCKER_HUB_USERNAME
-            - export TAG=$BITBUCKET_COMMIT
             - pipe: atlassian/ssh-run:0.2.2
               variables:
                 SSH_USER: $SSH_USER
                 SERVER: $SSH_SERVER
                 COMMAND: |
                   sh -c '
-                  export DOCKER_HUB_USERNAME='"$DOCKER_HUB_USERNAME"' && \
-                  export TAG='"$TAG"' && \
                   cd /var/www/sparx-api/ && \
                   (docker-compose down || true) && \
                   docker-compose pull && \
