--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -32,16 +32,16 @@ pipelines:
                 COMMAND: |
                   sh -c '
                   update_or_append() {
-                    local file=$1
-                    local key=$2
-                    local value=$3
+                    local file="$1"
+                    local key="$2"
+                    local value="$3"
 
                     if grep -qE "^$key=" "$file"; then
-                      sed -i "s/^$key=.*/$key=$value/" "$file"
+                        sed -i "s|^$key=.*|$key=$value|" "$file"
                     else
-                      echo "$key=$value" >> "$file"
+                        echo "$key=$value" >> "$file"
                     fi
-                  }
+                    }
 
                   update_or_append "/var/www/sparx-api/.env" "DOCKER_HUB_USERNAME" "$DOCKER_HUB_USERNAME"
                   update_or_append "/var/www/sparx-api/.env" "TAG" "$BITBUCKET_COMMIT"
