--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -31,19 +31,8 @@ pipelines:
                 SERVER: $SSH_SERVER
                 COMMAND: |
                   sh -c '
-                  update_or_append() {
-                    local file="$1"
-                    local key="$2"
-                    local value="$3"
-
-                    if grep -qE "^$key=" "$file"; then
-                        sed -i "s|^$key=.*|$key=$value|" "$file"
-                    else
-                        echo "$key=$value" >> "$file"
-                    fi
-                  }
-                  update_or_append "/var/www/sparx-api/.env" "DOCKER_HUB_USERNAME" "'$DOCKER_HUB_USERNAME'"
-                  update_or_append "/var/www/sparx-api/.env" "TAG" "'$BITBUCKET_COMMIT'"
+                  sed -i "s|DOCKER_HUB_USERNAME=.*|DOCKER_HUB_USERNAME=$DOCKER_HUB_USERNAME|" /var/www/sparx-api/.env
+                  sed -i "s|TAG=.*|TAG=$BITBUCKET_COMMIT|" /var/www/sparx-api/.env
                   '
 
       - step:
