using new ssl cert

--- a/.env.prod
+++ b/.env.prod
@@ -12,6 +12,7 @@ POSTGRES_DB=postgres
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=pgadmin4
 
-CLIENT_BASE_URL=https://sparx-chat.netlify.app
+CLIENT_BASE_URL=https://spa-rx.ca
 
-BASE_URL=https://165.227.44.99:3000
+BASE_URL=https://api.spa-rx.ca
+PORT=3000
