--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - db
     volumes:
       - /var/log:/var/log
+      - /etc/letsencrypt:/etc/letsencrypt
 
   db:
     container_name: postgres
