debugging socket connections

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.2.3",
     "@nestjs/platform-socket.io": "^10.0.5",
+    "@nestjs/serve-static": "^4.0.0",
     "@nestjs/swagger": "^7.1.1",
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^10.0.5",
