--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,5 +39,18 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
 
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+      GUNICORN_ACCESS_LOGFILE: /dev/null
+    ports:
+      - '5050:80'
+    depends_on:
+      - db
+
 volumes:
   pgdata:
