using cloudinary to store images

--- a/.env
+++ b/.env
@@ -20,3 +20,7 @@ DOCKER_HUB_USERNAME=dev
 TAG=dev
 
 PINO_LOG_LEVEL=error
+
+CLOUDINARY_CLOUD_NAME=awhitebird
+CLOUDINARY_API_KEY=496179958647858
+CLOUDINARY_API_SECRET=Eg_flrg1GRNZtT6OgH2XD6K9nyg
