--- a/.env.prod
+++ b/.env.prod
@@ -16,3 +16,7 @@ CLIENT_BASE_URL=https://spa-rx.ca
 
 BASE_URL=https://api.spa-rx.ca
 PORT=3000
+
+CLOUDINARY_CLOUD_NAME=awhitebird
+CLOUDINARY_API_KEY=496179958647858
+CLOUDINARY_API_SECRET=Eg_flrg1GRNZtT6OgH2XD6K9nyg
