--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,13 @@ version: '3.9'
 services:
   app:
     env_file:
-      - .env.prod
+      - .env
     image: $DOCKER_HUB_USERNAME/sparx:$TAG
     build:
       context: .
       dockerfile: Dockerfile
       args:
-        - NODE_ENV=production
+        - NODE_ENV=development
     environment:
       DB_TYPE: postgres
       PG_USER: ${PG_USER}
@@ -17,7 +17,7 @@ services:
       PG_DB: ${PG_DB}
       PG_PORT: ${PG_PORT}
       PG_HOST: db
-      NODE_ENV: production
+      NODE_ENV: development
     ports:
       - '3000:3000'
     depends_on:
