troubleshooting docker-compose config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
 
   db:
     container_name: postgres
-    image: postgres
+    image: postgres:15
     restart: always
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
