troubleshooting docker-compose config

--- a/.env.prod
+++ b/.env.prod
@@ -20,3 +20,8 @@ BASE_URL=https://api.spa-rx.ca
 CLOUDINARY_CLOUD_NAME=dwkvw91pm
 CLOUDINARY_API_KEY=496179958647858
 CLOUDINARY_API_SECRET=Eg_flrg1GRNZtT6OgH2XD6K9nyg
+
+PINO_LOG_LEVEL=error
+
+DOCKER_HUB_USERNAME=dev
+TAG=dev
