--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ CLIENT_BASE_URL=http://localhost:5173
 BASE_URL=http://localhost:3000
 
 DOCKER_HUB_USERNAME=dev
-TAG=dev12
+TAG=dev
 
 PINO_LOG_LEVEL=error
 
