troubleshooting docker-compose config

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -30,9 +30,8 @@ pipelines:
                 SSH_USER: $SSH_USER
                 SERVER: $SSH_SERVER
                 COMMAND: |
-                  sh -c '
-                  sed -i "s|DOCKER_HUB_USERNAME=.*|DOCKER_HUB_USERNAME=$DOCKER_HUB_USERNAME|" /var/www/sparx-api/.env.prod
-                  sed -i "s|TAG=.*|TAG=$BITBUCKET_COMMIT|" /var/www/sparx-api/.env.prod
+                  echo "DOCKER_HUB_USERNAME=$DOCKER_HUB_USERNAME" >> /var/www/sparx-api/.env.prod
+                  echo "TAG=$BITBUCKET_COMMIT" >> /var/www/sparx-api/.env.prod
                   '
 
       - step:
