added env variable for port

--- a/.env
+++ b/.env
@@ -14,7 +14,9 @@ PGADMIN_DEFAULT_PASSWORD=pgadmin4
 
 CLIENT_BASE_URL=http://localhost:5173
 
-BASE_URL=http://localhost:3000
+BASE_URL=http://localhost
+
+PORT=3000
 
 DOCKER_HUB_USERNAME=dev
 TAG=dev
