--- a/.env.prod
+++ b/.env.prod
@@ -17,6 +17,8 @@ CLIENT_BASE_URL=https://spa-rx.ca
 
 BASE_URL=https://api.spa-rx.ca
 
+PORT=3000
+
 CLOUDINARY_CLOUD_NAME=dwkvw91pm
 CLOUDINARY_API_KEY=496179958647858
 CLOUDINARY_API_SECRET=Eg_flrg1GRNZtT6OgH2XD6K9nyg
