created a new exceptions classes to log exceptions to sentry

--- a/.env
+++ b/.env
@@ -26,3 +26,5 @@ PINO_LOG_LEVEL=error
 CLOUDINARY_CLOUD_NAME=dwkvw91pm
 CLOUDINARY_API_KEY=496179958647858
 CLOUDINARY_API_SECRET=Eg_flrg1GRNZtT6OgH2XD6K9nyg
+
+SENTRY_DNS=https://f924b1048a613da1b46648e681417799@o4505864940879872.ingest.sentry.io/4505971320881152
