--- a/.env.prod
+++ b/.env.prod
@@ -24,3 +24,5 @@ CLOUDINARY_API_KEY=496179958647858
 CLOUDINARY_API_SECRET=Eg_flrg1GRNZtT6OgH2XD6K9nyg
 
 PINO_LOG_LEVEL=error
+
+SENTRY_DNS=https://f924b1048a613da1b46648e681417799@o4505864940879872.ingest.sentry.io/4505971320881152
