--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "@nestjs/swagger": "^7.1.1",
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^10.0.5",
+    "@sentry/node": "^7.72.0",
+    "@sentry/profiling-node": "^1.2.1",
+    "@sentry/tracing": "^7.72.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
