--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -33,6 +33,8 @@ pipelines:
                   sh -c '
                   echo "DOCKER_HUB_USERNAME=$DOCKER_HUB_USERNAME" >> /var/www/sparx-api/.env.prod
                   echo "TAG=$BITBUCKET_COMMIT" >> /var/www/sparx-api/.env.prod
+                  echo "DOCKER_HUB_USERNAME=$DOCKER_HUB_USERNAME" >> /var/www/sparx-api/.env
+                  echo "TAG=$BITBUCKET_COMMIT" >> /var/www/sparx-api/.env
                   '
 
       - step:
