initial testing setup with jest. also setting up a pipeline step to automate tests on push to any branch

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,4 +1,11 @@
 pipelines:
+  default:
+    - step:
+        name: Run Tests
+        script:
+          - npm install
+          - npm test
+
   branches:
     master:
       - step:
