--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "docker-rebuild": "bash ./scripts/rebuild.sh",
-    "docker": "docker-compose up"
+    "docker": "docker-compose up",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.9.1",
