removing verbose from npm install

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,7 +5,7 @@ pipelines:
     - step:
         name: Run Tests
         script:
-          - npm install --verbose
+          - npm install
           - npm test
 
   branches:
