--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "docker-rebuild": "bash ./scripts/rebuild.sh",
     "docker": "docker-compose up",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage"
+    "test": "node_modules/.bin/jest",
+    "test:watch": "node_modules/.bin/jest --watch",
+    "test:cov": "node_modules/.bin/jest --coverage"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.9.1",
