--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "swagger-ui-express": "^4.6.3",
     "typeorm": "^0.3.17",
     "typeorm-naming-strategies": "^4.1.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "jest": "^29.5.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -84,7 +85,6 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.5.0",
     "prettier": "^2.8.8",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
