--- a/package.json
+++ b/package.json
@@ -63,8 +63,7 @@
     "swagger-ui-express": "^4.6.3",
     "typeorm": "^0.3.17",
     "typeorm-naming-strategies": "^4.1.0",
-    "uuid": "^9.0.0",
-    "jest": "^29.5.0"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -88,6 +87,7 @@
     "prettier": "^2.8.8",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
+    "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
