optimizining cicd pipeline

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,20 @@
 node_modules
 dist
 .git
+.gitignore
 coverage
 logs
 scripts
 .vscode
-.env*
+.env
+.env.prod
+nest-cli.json
+README.md
+.eslintrc.js
+
+docker-compose.prod.yml
+docker-compose.yml
+bitbucket-pipelines.yml
+Dockerfile
+tsconfig.json
+tsconfig.build.json
