--- a/.env
+++ b/.env
@@ -1,30 +1,19 @@
 NODE_ENV=development
+BASE_URL=http://localhost
+CLIENT_BASE_URL=http://localhost:5173
+PORT=3000
 
-PG_USER=postgres
-PG_PASSWORD=postgres
-PG_DB=postgres
-PG_PORT=5432
-
-POSTGRES_PASSWORD=postgres
 POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
-
+POSTGRES_PORT=5432
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=pgadmin4
 
-CLIENT_BASE_URL=http://localhost:5173
-
-BASE_URL=http://localhost
-
-PORT=3000
-
-DOCKER_HUB_USERNAME=dev
-TAG=dev
-
 PINO_LOG_LEVEL=error
-
 CLOUDINARY_CLOUD_NAME=dwkvw91pm
 CLOUDINARY_API_KEY=496179958647858
 CLOUDINARY_API_SECRET=Eg_flrg1GRNZtT6OgH2XD6K9nyg
-
 SENTRY_DNS=https://f924b1048a613da1b46648e681417799@o4505864940879872.ingest.sentry.io/4505971320881152
+DOCKER_HUB_USERNAME=dev
+TAG=dev
