--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,7 +4,7 @@ services:
   app:
     env_file:
       - .env
-    image: $DOCKER_HUB_USERNAME/sparx:$TAG
+    image: sparx/production:$TAG
     build:
       context: .
       dockerfile: Dockerfile
