--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start:dev": "nest start --tsc --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src}/**/*.ts\" --fix",
     "docker-rebuild": "bash ./scripts/rebuild.sh",
     "docker": "docker-compose up",
     "test": "node_modules/.bin/jest",
