adjusted env handling

--- a/.env.prod
+++ b/.env.prod
@@ -3,10 +3,13 @@ BASE_URL=https://api.spa-rx.ca
 CLIENT_BASE_URL=https://spa-rx.ca
 PORT=3000
 
-POSTGRES_PORT=5432
-POSTGRES_PASSWORD=postgres
-POSTGRES_USER=postgres
-POSTGRES_DB=postgres
+DB_TYPE=postgres
+PH_HOST=db
+PG_PORT=5432
+PG_PASSWORD=postgres
+PG_USER=postgres
+PG_DB=postgres
+
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=pgadmin4
 
@@ -15,3 +18,5 @@ CLOUDINARY_API_KEY=496179958647858
 CLOUDINARY_API_SECRET=Eg_flrg1GRNZtT6OgH2XD6K9nyg
 PINO_LOG_LEVEL=error
 SENTRY_DNS=https://f924b1048a613da1b46648e681417799@o4505864940879872.ingest.sentry.io/4505971320881152
+DOCKER_HUB_USERNAME=awhitebird
+TAG=be232d9d9dbdcc240a2f853d5cc1d94769a6488b
