--- a/.env.prod
+++ b/.env.prod
@@ -4,11 +4,11 @@ CLIENT_BASE_URL=https://spa-rx.ca
 PORT=3000
 
 DB_TYPE=postgres
-PH_HOST=db
-PG_PORT=5432
-PG_PASSWORD=postgres
-PG_USER=postgres
-PG_DB=postgres
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+POSTGRES_PASSWORD=postgres
+POSTGRES_USER=postgres
+POSTGRES_DB=postgres
 
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=pgadmin4
