--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -12,10 +12,10 @@ services:
         - NODE_ENV=production
     environment:
       DB_TYPE: postgres
-      PG_USER: ${PG_USER}
-      PG_PASSWORD: ${PG_PASSWORD}
-      PG_DB: ${PG_DB}
-      PG_PORT: ${PG_PORT}
+      PG_USER: ${POSTGRES_USER}
+      PG_PASSWORD: ${POSTGRES_PASSWORD}
+      PG_DB: ${POSTGRES_DB}
+      PG_PORT: ${POSTGRES_PORT}
       PG_HOST: db
       NODE_ENV: production
     ports:
