--- a/.env
+++ b/.env
@@ -3,10 +3,13 @@ BASE_URL=http://localhost
 CLIENT_BASE_URL=http://localhost:5173
 PORT=3000
 
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_DB=postgres
+DB_TYPE=postgres
+POSTGRES_HOST=db
 POSTGRES_PORT=5432
+POSTGRES_PASSWORD=postgres
+POSTGRES_USER=postgres
+POSTGRES_DB=postgres
+
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=pgadmin4
 
