--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
   "watchOptions": {
     // Use native file system events for files and directories
