--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,19 +12,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-      - name: Build and push Docker image # This line and below were indented one level too deep
+
+      - name: Build and push Docker image
         run: |
           export TAG=${{ github.sha }}
           export IMAGE_NAME=${{ secrets.DOCKER_HUB_USERNAME }}/sparx:$TAG
           docker build --no-cache --build-arg NODE_ENV=production -t $IMAGE_NAME .
           docker push $IMAGE_NAME
+
+      - name: Add SSH server to known hosts
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_KNOWN_HOSTS }}" >> ~/.ssh/known_hosts
+
       - name: Deploy to server
         uses: appleboy/ssh-action@master
         with:
@@ -36,7 +45,7 @@ jobs:
             echo "DOCKER_HUB_USERNAME=${{ secrets.DOCKER_HUB_USERNAME }}" >> .env && \
             echo "TAG=${{ github.sha }}" >> .env && \
             (docker-compose -f docker-compose.db.yml up -d || true) && \
-            scp docker-compose.db.yml docker-compose.prod.yml ${{ secrets.SSH_USER }}@${{ secrets.SSH_SERVER }}:/var/www/sparx-api/ && \
+            scp -o StrictHostKeyChecking=no docker-compose.db.yml docker-compose.prod.yml ${{ secrets.SSH_USER }}@${{ secrets.SSH_SERVER }}:/var/www/sparx-api/ && \
             (docker-compose -f docker-compose.prod.yml down || true) && \
             docker-compose -f docker-compose.prod.yml pull && \
             docker-compose -f docker-compose.prod.yml up -d && \
