--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,52 +1,10 @@
-name: CI/CD Workflow
+name: Test SSH Connection
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
+on: [push]
 
 jobs:
-  deploy:
-    if: github.ref == 'refs/heads/main'
+  test-ssh:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-
-      - name: Build and push Docker image
-        run: |
-          export TAG=${{ github.sha }}
-          export IMAGE_NAME=${{ secrets.DOCKER_HUB_USERNAME }}/sparx:$TAG
-          docker build --no-cache --build-arg NODE_ENV=production -t $IMAGE_NAME .
-          docker push $IMAGE_NAME
-
-      - name: Add SSH server to known hosts
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_KNOWN_HOSTS }}" >> ~/.ssh/known_hosts
-
-      - name: Deploy to server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSH_SERVER }}
-          username: root
-          key: ${{ secrets.SSH_KEY }}
-          script: |
-            cd /var/www/sparx-api/ && \
-            echo "DOCKER_HUB_USERNAME=${{ secrets.DOCKER_HUB_USERNAME }}" >> .env && \
-            echo "TAG=${{ github.sha }}" >> .env && \
-            (docker-compose -f docker-compose.db.yml up -d || true) && \
-            scp -o StrictHostKeyChecking=no docker-compose.db.yml docker-compose.prod.yml ${{ secrets.SSH_USER }}@${{ secrets.SSH_SERVER }}:/var/www/sparx-api/ && \
-            (docker-compose -f docker-compose.prod.yml down || true) && \
-            docker-compose -f docker-compose.prod.yml pull && \
-            docker-compose -f docker-compose.prod.yml up -d && \
-            docker image prune -f
+      - name: Test SSH
+        run: ssh -vvv -i ${{ secrets.SSH_KEY }} -o StrictHostKeyChecking=accept-new root@165.227.44.99 'echo "SSH connection successful"'
