--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,16 +1,52 @@
-name: Test SSH Connection
+name: CI/CD Workflow
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
 
 jobs:
-  test-ssh:
+  deploy:
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+
+      - name: Build and push Docker image
+        run: |
+          export TAG=${{ github.sha }}
+          export IMAGE_NAME=${{ secrets.DOCKER_HUB_USERNAME }}/sparx:$TAG
+          docker build --no-cache --build-arg NODE_ENV=production -t $IMAGE_NAME .
+          docker push $IMAGE_NAME
+
       - name: Setup SSH Key
         run: |
           echo "${{ secrets.SSH_KEY }}" > ssh_key
           chmod 600 ssh_key
 
-      - name: Test SSH
-        run: ssh -vvv -i ssh_key -o StrictHostKeyChecking=accept-new root@165.227.44.99 'echo "SSH connection successful"'
-        shell: bash
+      - name: Add SSH server to known hosts
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_KNOWN_HOSTS }}" >> ~/.ssh/known_hosts
+
+      - name: Deploy to server
+        run: |
+          ssh -i ssh_key -o StrictHostKeyChecking=accept-new root@${{ secrets.SSH_SERVER }} 'cd /var/www/sparx-api/ && \
+          echo "DOCKER_HUB_USERNAME=${{ secrets.DOCKER_HUB_USERNAME }}" >> .env && \
+          echo "TAG=${{ github.sha }}" >> .env && \
+          (docker-compose -f docker-compose.db.yml up -d || true) && \
+          scp -i ssh_key -o StrictHostKeyChecking=no docker-compose.db.yml docker-compose.prod.yml root@${{ secrets.SSH_SERVER }}:/var/www/sparx-api/ && \
+          (docker-compose -f docker-compose.prod.yml down || true) && \
+          docker-compose -f docker-compose.prod.yml pull && \
+          docker-compose -f docker-compose.prod.yml up -d && \
+          docker image prune -f'
