--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,11 @@ jobs:
           echo "${{ secrets.SSH_KEY }}" > ssh_key
           chmod 600 ssh_key
 
+      - name: Add SSH server to known hosts
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_KNOWN_HOSTS }}" >> ~/.ssh/known_hosts
+
       - name: Deploy to server
         run: |
           echo "${{ secrets.SSH_KEY }}" > ssh_key
@@ -42,7 +47,7 @@ jobs:
           echo "DOCKER_HUB_USERNAME=${{ secrets.DOCKER_HUB_USERNAME }}" >> .env && \
           echo "TAG=${{ github.sha }}" >> .env && \
           (docker-compose -f docker-compose.db.yml up -d || true) && \
-          scp -i ssh_key -o StrictHostKeyChecking=no docker-compose.db.yml docker-compose.prod.yml root@${{ secrets.SSH_SERVER }}:/var/www/sparx-api/ && \
+          scp -vvv ssh_key -o StrictHostKeyChecking=no docker-compose.db.yml docker-compose.prod.yml root@165.227.44.99:/var/www/sparx-api/ && \
           (docker-compose -f docker-compose.prod.yml down || true) && \
           docker-compose -f docker-compose.prod.yml pull && \
           docker-compose -f docker-compose.prod.yml up -d && \
