--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,11 +43,11 @@ jobs:
         run: |
           echo "${{ secrets.SSH_KEY }}" > ssh_key
           chmod 600 ssh_key
-          ssh -vvv ssh_key -o StrictHostKeyChecking=accept-new root@165.227.44.99 'cd /var/www/sparx-api/ && \
+          ssh -vvv -i ssh_key -o StrictHostKeyChecking=accept-new root@165.227.44.99 'cd /var/www/sparx-api/ && \
           echo "DOCKER_HUB_USERNAME=${{ secrets.DOCKER_HUB_USERNAME }}" >> .env && \
           echo "TAG=${{ github.sha }}" >> .env && \
           (docker-compose -f docker-compose.db.yml up -d || true) && \
-          scp -vvv ssh_key -o StrictHostKeyChecking=no docker-compose.db.yml docker-compose.prod.yml root@165.227.44.99:/var/www/sparx-api/ && \
+          scp -vvv -i ssh_key -o StrictHostKeyChecking=no docker-compose.db.yml docker-compose.prod.yml root@165.227.44.99:/var/www/sparx-api/ && \
           (docker-compose -f docker-compose.prod.yml down || true) && \
           docker-compose -f docker-compose.prod.yml pull && \
           docker-compose -f docker-compose.prod.yml up -d && \
