adding roadmap auto-generation

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "nodemailer": "^6.9.4",
     "nodemailer-mailgun-transport": "^2.1.5",
     "nodemailer-mailjet-transport": "^1.0.4",
+    "openai": "^4.33.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
