adding network name to docker-compose

--- a/docker-compose.db.yml
+++ b/docker-compose.db.yml
@@ -11,6 +11,8 @@ services:
       POSTGRES_DB: ${PG_DB}
     ports:
       - '5432:5432'
+    networks:
+      - sparx
     volumes:
       - pgdata:/var/lib/postgresql/data
 
